Updated Markdown compile, added ToC Generation

--- a/docs/apb4_gpio_datasheet.tex
+++ b/docs/apb4_gpio_datasheet.tex
@@ -2,7 +2,7 @@
 % \usepackage{showframe}
 
 % Document Setup
-\input{tex/preamble}
+\input{tex/preamble.tex}
 \input{tex/setup.tex}
 
 \begin{document}
@@ -20,22 +20,16 @@
 \mainmatter
 
 \input{tex/introduction.tex}
-	\pagebreak
 
 \input{tex/specification.tex}
-	\pagebreak
 
 \input{tex/configuration.tex}
-	\pagebreak
 
 \input{tex/interfaces.tex}
-	\clearpage
 
 \input{tex/resources.tex}
-	\pagebreak
 
 \input{tex/references.tex}
-	\pagebreak
 	
 \input{tex/history.tex}
 
