--- a/docs/tex/resources.tex
+++ b/docs/tex/resources.tex
@@ -1,16 +1,21 @@
-\chapter{Resources}\label{resources}
+\chapter{Resources}
 
-Below are some example implementations for various platforms. All implementations are push button, no effort has been undertaken to
-reduce area or improve performance.
+Below are some example implementations for various platforms. All implementations are push button, with no effort undertaken to reduce area or improve performance. 
+\setlength\LTleft{0pt}
+\setlength\LTright{0pt}
 
-\begin{longtable}[]{@{}lllll@{}}
-\toprule
-Platform & DFF & Logic Cells & Memory & Performance (MHz)\tabularnewline
-\midrule
-\endhead
-& & & &\tabularnewline
-& & & &\tabularnewline
-& & & &\tabularnewline
-\bottomrule
-\caption{Resource Utilization Examples}
+\begin{longtable}[]{@{\extracolsep{\fill}}lcccc@{}}
+	\toprule
+		\textbf{Platform} & \textbf{DFF} & \textbf{Logic Cells/Elements} &
+		\textbf{Memory} & \textbf{Performance (MHz)}\tabularnewline
+	\midrule
+	\endhead
+		& & & &\tabularnewline
+		& & & &\tabularnewline
+		& & & &\tabularnewline
+	\bottomrule
+	\caption{Resource Utilisation Examples}
+	\label{tab:RESOURCES}
 \end{longtable}
+
+Note: This table will be updated as more examples are compiled.
