Update for irq support

--- a/docs/tex/resources.tex
+++ b/docs/tex/resources.tex
@@ -7,12 +7,12 @@ Below are some example implementations for various platforms. All implementation
 \begin{longtable}[]{@{\extracolsep{\fill}}lcccc@{}}
 	\toprule
 		\textbf{Platform} & \textbf{DFF} & \textbf{Logic Cells/Elements} &
-		\textbf{Memory} & \textbf{Performance (MHz)}\tabularnewline
+		\textbf{Memory} & \textbf{Performance (MHz)} & \textbf{Comments} &\tabularnewline
 	\midrule
 	\endhead
-		& & & &\tabularnewline
-		& & & &\tabularnewline
-		& & & &\tabularnewline
+	 Cyclone V & 140  & 96ALUTs & 0 & & PDATA_SIZE=8\tabularnewline
+		& & & & &\tabularnewline
+		& & & & &\tabularnewline
 	\bottomrule
 	\caption{Resource Utilisation Examples}
 	\label{tab:RESOURCES}
