Add comments column

--- a/docs/tex/resources.tex
+++ b/docs/tex/resources.tex
@@ -1,16 +1,16 @@
 \chapter{Resources}
 
-Below are some example implementations for various platforms. All implementations are push button, with no effort undertaken to reduce area or improve performance. 
+Below are some example implementations for various platforms. All implementations are push button, with no effort undertaken to reduce area or improve performance.
 \setlength\LTleft{0pt}
 \setlength\LTright{0pt}
 
-\begin{longtable}[]{@{\extracolsep{\fill}}lcccc@{}}
+\begin{longtable}[]{@{\extracolsep{\fill}}lccccl@{}}
 	\toprule
-		\textbf{Platform} & \textbf{DFF} & \textbf{Logic Cells/Elements} &
-		\textbf{Memory} & \textbf{Performance (MHz)} & \textbf{Comments} &\tabularnewline
+		\textbf{Platform} & \textbf{DFF} & \textbf{Cells} &
+		\textbf{Memory} & \textbf{Perf. (MHz)} & \textbf{Comments} \tabularnewline
 	\midrule
 	\endhead
-	 Cyclone V & 140  & 96ALUTs & 0 & & PDATA_SIZE=8\tabularnewline
+	 Cyclone V & 140  & 96ALUTs & 0 & 0 & PDATA\_SIZE=8\tabularnewline
 		& & & & &\tabularnewline
 		& & & & &\tabularnewline
 	\bottomrule
