--- a/docs/tex/introduction.tex
+++ b/docs/tex/introduction.tex
@@ -4,7 +4,7 @@ The APB4 GPIO Core is fully parameterised core designed to provide a
 user-defined number of general purpose, bidirectional IO to a design.
 
 The IO are accessible via an \emph{AMBA APB v2.0 Specification}
-interface -- typically referred to as APB4 -- and the core operates
+interface -- typically referred to as APB4 -- with the core operating
 synchronously with the rising edge of the APB4 Bus Clock..
 
 Inputs to the core may operate asynchronously to the core and will be
@@ -13,7 +13,7 @@ to operate in push-pull mode or open-drain.
 
 \begin{figure}[tbh]
 	\centering
-	\includegraphics{assets/img/apb4-gpio-sig.png}
+	\includegraphics{assets/img/apb4-gpio-sig}
 	\caption{APB4 GPIO Signalling}
 	\label{fig:apb4-gpio-sig}
 \end{figure}
