Update diagrams (use eps format, add IRQ_O to sys diag)

--- a/docs/tex/specification.tex
+++ b/docs/tex/specification.tex
@@ -12,7 +12,7 @@ bi-directional bus as shown below:
 
 \begin{figure}[tbh]
 	\centering
-	\includegraphics{assets/img/apb4-gpio-sys.png}
+	\includegraphics{assets/img/apb4-gpio-sys}
 	\caption{Bidirectional IO Pad}
 	\label{fig:apb4-gpio-sys}
 \end{figure}
@@ -43,7 +43,7 @@ Logically the push-pull mode is configured as follows:
 
 \begin{figure}[tbh]
 	\centering
-	\includegraphics{assets/img/apb4-gpio-pp.png}
+	\includegraphics{assets/img/apb4-gpio-pp}
 	\caption{Push-Pull Configuration}
 	\label{fig:apb4-gpio-pp}
 \end{figure}
@@ -57,7 +57,7 @@ the output buffer corresponding to the value of the OUTPUT register.
 
 \begin{figure}[tbh]
 	\centering
-	\includegraphics{assets/img/apb4-gpio-od.png}
+	\includegraphics{assets/img/apb4-gpio-od}
 	\caption{Open Drain Configuration}
 	\label{fig:apb4-gpio-od}
 \end{figure}
