--- a/docs/tex/interface-gpio.tex
+++ b/docs/tex/interface-gpio.tex
@@ -40,5 +40,5 @@ output buffer.
 
 \subsection{IRQ\_O}\label{irq_o}
 
-\texttt{IRQ\_O} description...
+\texttt{IRQ\_O} is a single bit output which is asserted ('1') when a valid interrupt is triggered on \texttt{GPIO\_I}. The conditions for the assertion of \texttt{IRQ\_O} are programmable via a control register interface.
 
