--- a/docs/tex/setup.tex
+++ b/docs/tex/setup.tex
@@ -9,9 +9,9 @@
 \heading{APB4 General Purpose IO}
 \author{Roa Logic}
 \date{28-May-2020}
-\version{1.1}
+\version{2.0}
 \doctype{Datasheet}
-\project{http://roalogic.github.io/apb4\_gpio}
+\project{\url{https://roalogic.github.io/apb4\_gpio}}
 \author{Paul Hardy}
 
  % Set page headers/footer
