--- a/docs/tex/introduction.tex
+++ b/docs/tex/introduction.tex
@@ -1,17 +1,12 @@
 \chapter{Introduction} \label{introduction}
 
-The APB4 GPIO Core is fully parameterised core designed to provide a
-user-defined number of general purpose, bidirectional IO to a design.
+The APB4 GPIO Core is fully parameterised core designed to provide a user-defined number of general purpose, bidirectional IO to a design.
 
-The IO are accessible via an \emph{AMBA APB v2.0 Specification}
-interface -- typically referred to as APB4 -- with the core operating
-synchronously with the rising edge of the APB4 Bus Clock..
+The IO are accessible via an \emph{AMBA APB v2.0 Specification} interface -- typically referred to as APB4 -- with the core operating synchronously at the rising edge of the APB4 Bus Clock..
 
-Inputs to the core may operate asynchronously to the core and will be
-automatically synchronised to the bus clock. Outputs may be configured
-to operate in push-pull mode or open-drain.
+GPIO I=inputs to the core may operate asynchronously to the core and will be automatically synchronised to the bus clock. Outputs may be configured to operate in push-pull mode or open-drain.
 
-Inputs may also be individually configured to act as level or edge sensitive interrupts. A single IRQ output is provided to connect to the host.
+GPIO inputs may also be individually configured to generate a level or edge sensitive interrupt. A single IRQ output is provided to connect to the host.
 
 \begin{figure}[tbh]
 	\centering
