--- a/docs/tex/specification.tex
+++ b/docs/tex/specification.tex
@@ -51,9 +51,7 @@ Logically the push-pull mode is configured as follows:
 
 \subsection{Open-Drain Mode}\label{open-drain-mode}
 
-In open-drain mode, each bit of GPIO\_O is always driven low (`0') and individual
-\texttt{GPIO\_OE} signals set to enable (i.e. Logic `0') or high-Z (Logic `1') at
-the output buffer corresponding to the value of the OUTPUT register.
+In open-drain mode, each bit of GPIO\_O is always driven low (`0') and individual \texttt{GPIO\_OE} signals enable (i.e. Logic `0') or high-Z (Logic `1') the output buffer corresponding to the value of the OUTPUT register.
 
 \begin{figure}[tbh]
 	\centering
