--- a/docs/tex/configuration.tex
+++ b/docs/tex/configuration.tex
@@ -14,7 +14,7 @@ Parameter & Type & Default & Description\tabularnewline
 \midrule
 \endhead
 \texttt{PDATA\_SIZE} & Integer & 8 & APB4 Data Bus \& GPIO Size\tabularnewline
-\texttt{INPUT\_STAGES} & Integer & 2 & Number of \texttt{GPIO\_I} input synchronization
+\texttt{INPUT\_STAGES} & Integer & 2 & Number of \texttt{GPIO\_I} input synchronisation
 stages\tabularnewline
 \bottomrule
 \caption{Core Parameters}
