--- a/docs/tex/interface-gpio.tex
+++ b/docs/tex/interface-gpio.tex
@@ -35,7 +35,7 @@ register. In push-pull mode it is used to enable a bidirectional output
 buffer whose input is driven the \texttt{GPIO\_O} bus
 
 In open-drain mode the \texttt{GPIO\_OE} bus is used to enable a logic `0' to be
-driven from the \texttt{GPIO\_O} bus, and a logic '1' by disabling (`High-Z') the
+driven from the \texttt{GPIO\_O} bus, and a logic '1' by disabling (`Hi-Z') the
 output buffer.
 
 \subsection{IRQ\_O}\label{irq_o}
