--- a/docs/tex/specification.tex
+++ b/docs/tex/specification.tex
@@ -12,19 +12,17 @@ bi-directional bus as shown below:
 
 \begin{figure}[tbh]
 	\centering
-	\includegraphics{assets/img/apb4-gpio-sys.png}
+	\includegraphics{assets/img/apb4-gpio-sys}
 	\caption{Bidirectional IO Pad}
 	\label{fig:apb4-gpio-sys}
 \end{figure}
 
-The core operates synchronously with the APB4 Bus Clock. Inputs may be
-asynchronous to this bus clock and therefore the implements configurable
-length synchronisation
+The core operates synchronously with the APB4 Bus Clock. The core synchronises all \texttt{GPIO\_I} inputs to the APB4 Bus Clock domain.
 
 \section{Operating Modes}\label{operating-modes}
 
 The core supports bidirectional IO pads as shown in Figure 3, where each
-IO may operate in a push-pull or open-drain mode. The mode of each IO is
+IO can be programmed to operate in push-pull or open-drain mode. The mode of each IO is
 defined via the MODE register.
 
 \begin{longtable}[]{@{}|p{2cm}p{12cm}@{}}
@@ -37,15 +35,15 @@ defined via the MODE register.
 
 \subsection{Push-Pull Mode}\label{push-pull-mode}
 
-In push-pull mode, the \texttt{GPIO\_O} bus is driven from an internal \texttt{OUTPUT}
+In push-pull mode, each bit of the \texttt{GPIO\_O} bus is driven from an internal \texttt{OUTPUT}
 register and \texttt{GPIO\_OE} is controlled via the
-DIRECTION register 
+DIRECTION register
 
 Logically the push-pull mode is configured as follows:
 
 \begin{figure}[tbh]
 	\centering
-	\includegraphics{assets/img/apb4-gpio-pp.png}
+	\includegraphics{assets/img/apb4-gpio-pp}
 	\caption{Push-Pull Configuration}
 	\label{fig:apb4-gpio-pp}
 \end{figure}
@@ -53,13 +51,11 @@ Logically the push-pull mode is configured as follows:
 
 \subsection{Open-Drain Mode}\label{open-drain-mode}
 
-In open-drain mode, GPIO\_O is always driven low (`0') and individual
-GPIO\_OE signals set to enable (i.e. Logic `0') or high-Z (Logic `1') at
-the output buffer corresponding to the value of the OUTPUT register.
+In open-drain mode, each bit of GPIO\_O is always driven low (`0') and individual \texttt{GPIO\_OE} signals enable (i.e. Logic `0') or Hi-Z (Logic `1') the output buffer corresponding to the value of the OUTPUT register.
 
 \begin{figure}[tbh]
 	\centering
-	\includegraphics{assets/img/apb4-gpio-od.png}
+	\includegraphics{assets/img/apb4-gpio-od}
 	\caption{Open Drain Configuration}
 	\label{fig:apb4-gpio-od}
 \end{figure}
@@ -70,4 +66,6 @@ The inclusion of technology specific IO Pads is not part of the APB4
 GPIO core and instead left to the designer. Pads may be behaviourally
 inferred however as follows:
 
-\texttt{PAD[n] <= GPIO\_OE[n] ? GPIO\_O[n] : 1'bz;}
+\texttt{PAD[n] = GPIO\_OE[n] ? GPIO\_O[n] : 1'bz;}
+
+\texttt{GPIO\_I[n] = PAD[n];}
